--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - "pip install -r requirements.txt"
 #command to run tests
 script:
-  - py -m unittest
+  - python -m unittest
   - coverage report
 
 after_success:
